<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/utilitiesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/utilities"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Button
            android:id="@+id/signoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/utilitiesTitle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_bg_top"
            android:drawableLeft="@drawable/btn_about"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/sign_out"
            android:onClick="onLogoutClick"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/selectConfigButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signoutButton"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_bg_middle"
            android:drawableLeft="@drawable/btn_applications"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:onClick="onSelectConfigClick"
            android:text="@string/select_config"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/syncButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectConfigButton"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_bg_bottom"
            android:drawableLeft="@drawable/btn_sync"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:onClick="onSyncClick"
            android:text="@string/synchronization"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/securityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/syncButton"
            android:layout_margin="15dp"
            android:text="@string/security"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Switch
            android:id="@+id/internalModeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/securityTitle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/internal_mode"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/supportTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/internalModeSwitch"
            android:layout_margin="15dp"
            android:text="@string/support"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Button
            android:id="@+id/helpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/supportTitle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_bg_top"
            android:drawableLeft="@drawable/btn_help"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/help"
            android:onClick="onHelpClick"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/reportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/helpButton"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_bg_middle"
            android:drawableLeft="@drawable/btn_report"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:onClick="onReportClick"
            android:text="@string/report"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/htmlDemoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reportButton"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_bg_bottom"
            android:drawableLeft="@drawable/btn_html5"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/html5_demo"
            android:onClick="onHtmlDemoClick"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/aboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/htmlDemoButton"
            android:layout_margin="15dp"
            android:text="@string/about"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutTitle"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_bg"
            android:drawableLeft="@drawable/btn_about"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/about_dsa"
            android:onClick="onAboutClick"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

</ScrollView>