<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@android:color/white">

    <TextView
        android:id="@+id/title"
        style="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:text="@string/about_title"
        android:textColor="@color/accent"/>

    <View
        android:id="@+id/titleDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/accent"/>

    <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:text="@string/create_and_developed"
        android:textColor="@android:color/black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/about"
        android:contentDescription="@string/about_icon_desc"/>

    <TextView
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:text="@string/about_desc"/>

    <TextView
        android:id="@+id/username"
        style="@android:style/TextAppearance.Small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/version"
        style="@android:style/TextAppearance.Small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>

    <TextView
        style="@android:style/TextAppearance.Small"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom|center_horizontal"
        android:text="@string/privacy_note"
        android:layout_marginBottom="15dp"/>

</LinearLayout>